--- a/.github/workflows/eda-lint.yml
+++ b/.github/workflows/eda-lint.yml
@@ -10,12 +10,20 @@ on:
     paths:
       - "extensions/**"
       - ".github/workflows/eda-lint.yml"
+permissions:  # added using https://github.com/step-security/secure-repo
+  contents: read
+
 jobs:
   tox:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-python@v5
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: "3.x"
       - name: Install tox
