--- a/.github/workflows/win_falcon_uninstall.yml
+++ b/.github/workflows/win_falcon_uninstall.yml
@@ -13,6 +13,9 @@ on:
       - 'roles/falcon_uninstall/**'
       - 'molecule/win_falcon_uninstall/**'
       - '.github/workflows/win_falcon_uninstall.yml'
+permissions:  # added using https://github.com/step-security/secure-repo
+  contents: read
+
 jobs:
   molecule:
     if: |
@@ -45,25 +48,30 @@ jobs:
         collection_role:
             - win_falcon_uninstall
     steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@f4a75cfd619ee5ce8d5b864b0d183aff3c69b55a # v2.13.1
+        with:
+          egress-policy: audit
+
       - name: Check out code
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         if: github.event_name != 'pull_request_target'
 
       - name: Check out code
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{github.event.pull_request.head.sha}}
         if: github.event_name == 'pull_request_target'
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE }}
           role-session-name: github-actions-molecule-ansible
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.11'
           cache: 'pip'
@@ -76,7 +84,7 @@ jobs:
           pip install -r .devcontainer/requirements.txt pywinrm
 
       - name: Build/Install the collection
-        uses: nick-fields/retry@v3
+        uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08 # v3.0.2
         with:
           timeout_minutes: 2
           max_attempts: 3
@@ -87,7 +95,7 @@ jobs:
 
       - name: Run role tests
         id: molecule-role-test
-        uses: nick-fields/retry@v3
+        uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08 # v3.0.2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
           MOLECULE_IMAGE_OWNER: ${{ matrix.molecule.image_owner }}
@@ -106,7 +114,7 @@ jobs:
         continue-on-error: true
 
       - name: Ensure instances are destroyed
-        uses: nick-fields/retry@v3
+        uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08 # v3.0.2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
           MOLECULE_IMAGE_OWNER: ${{ matrix.molecule.image_owner }}
@@ -124,7 +132,7 @@ jobs:
             molecule destroy -s ${{ matrix.collection_role }}
 
       - name: Assert molecule tests passed
-        uses: nick-fields/assert-action@v2
+        uses: nick-fields/assert-action@aa0067e01f0f6545c31755d6ca128c5a3a14f6bf # v2.0.0
         with:
           expected: success
           actual: ${{ steps.molecule-role-test.outcome }}
