fix: replace fail with assert modules for API auth pre-req validations
- Create shared API validation task file (validate_api_credentials.yml)
- Replace fail modules with assert modules for better error handling
- Add API credential validation to falcon_configure and falcon_uninstall roles
- Centralize validation logic for reusability across all roles
- Follow existing collection patterns with fail_msg and success_msg

Fixes #631

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 # tasks file for falcon_configure
+- name: API validation block
+  when:
+    - (falcon_client_id | default('', true)) | length > 0 and (falcon_client_secret | default('', true)) | length > 0
+    - falcon_option_set
+    - not falcon_cid
+  block:
+    - name: "CrowdStrike Falcon | Validate API Credentials"
+      ansible.builtin.include_tasks: ../falcon_install/tasks/validate_api_credentials.yml
+
 - name: API block
   when:
     - (falcon_client_id | default('', true)) | length > 0 and (falcon_client_secret | default('', true)) | length > 0
