fix: clean up structure and update include tasks/roles

--- a/roles/falcon_install/tasks/validate_api_credentials.yml
+++ b/roles/falcon_install/tasks/validate_api_credentials.yml
@@ -7,19 +7,19 @@
   ansible.builtin.assert:
     that:
       - falcon_cloud | default('', true) | length > 0
-    fail_msg: "falcon_cloud is not configured! Please configure falcon_cloud and re-run the installation again!"
+    fail_msg: "falcon_cloud is not configured! Please configure falcon_cloud and re-run again!"
     success_msg: "falcon_cloud is properly configured."
 
 - name: "CrowdStrike Falcon | Validate CrowdStrike API Client ID Is Defined"
   ansible.builtin.assert:
     that:
       - falcon_client_id | default('', true) | length > 0
-    fail_msg: "falcon_client_id is not configured! Please configure falcon_client_id and re-run the installation again!"
+    fail_msg: "falcon_client_id is not configured! Please configure falcon_client_id and re-run again!"
     success_msg: "falcon_client_id is properly configured."
 
 - name: "CrowdStrike Falcon | Validate CrowdStrike API Client Secret Is Defined"
   ansible.builtin.assert:
     that:
       - falcon_client_secret | default('', true) | length > 0
-    fail_msg: "falcon_client_secret is not configured! Please configure falcon_client_secret and re-run the installation again!"
+    fail_msg: "falcon_client_secret is not configured! Please configure falcon_client_secret and re-run again!"
     success_msg: "falcon_client_secret is properly configured."
