fix: roles - fix api auth pre-req assertions (#631) (#638)
* fix: replace fail with assert modules for API auth pre-req validations

- Create shared API validation task file (validate_api_credentials.yml)
- Replace fail modules with assert modules for better error handling
- Add API credential validation to falcon_configure and falcon_uninstall roles
- Centralize validation logic for reusability across all roles
- Follow existing collection patterns with fail_msg and success_msg

Fixes #631

* fix: clean up structure and update include tasks/roles

* fix: standardize validation patterns by converting fail to assert

- Convert sensor version decrement validation from fail to assert
- Convert CID validation for non-API installs from fail to assert
- Add success messages for better user feedback
- Improve semantic consistency across validation patterns
- Follow established assert patterns from validate_api_credentials.yml

This addresses remaining inconsistencies in GitHub issue #631 by ensuring
all configuration parameter validations use the same assert pattern.

* fix: complete assert standardization for API response validations (Phase 2)

- Convert Sensor Update Policy validation from fail to assert
- Convert Sensor Update Policy aarch64 validation from fail to assert
- Convert sensor availability validation from fail to assert
- Add success messages for better user feedback across all API validations
- Complete standardization of validation patterns throughout collection

This completes the comprehensive fix for GitHub issue #631 by ensuring
all validation logic uses consistent assert patterns with both fail_msg
and success_msg for optimal user experience.

* chore: add changelog fragment for API assertion standardization

Add changelog fragment documenting the comprehensive fix for issue #631
including replacement of fail modules with assert modules, consolidation
of duplicated API blocks, and improved user feedback.

References: #631, #638

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -2,10 +2,16 @@
 # tasks file for falcon_configure
 - name: API block
   when:
-    - (falcon_client_id | default('', true)) | length > 0 and (falcon_client_secret | default('', true)) | length > 0
+    - falcon_client_id | default('', true) | length > 0
+    - falcon_client_secret | default('', true) | length > 0
     - falcon_option_set
-    - not falcon_cid
+    - not falcon_cid | default('', true) | length > 0
   block:
+    - ansible.builtin.include_role:
+        name: falcon_install
+        tasks_from: validate_api_credentials
+      # noqa name[missing]
+
     - ansible.builtin.include_role:
         name: falcon_install
         tasks_from: auth
