--- a/.github/workflows/aap-refresh.yml
+++ b/.github/workflows/aap-refresh.yml
@@ -6,6 +6,7 @@ on:
 
 permissions:  # added using https://github.com/step-security/secure-repo
   contents: read
+  id-token: write
 
 jobs:
   refresh:
@@ -18,8 +19,19 @@ jobs:
       with:
         egress-policy: audit
 
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
+      with:
+        role-to-assume: ${{ vars.AWS_OIDC_ROLE }}
+        role-session-name: github-actions-aap-refresh
+        aws-region: us-west-2
+
+    - name: Get secrets from AWS Secrets Manager
+      uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802 # v2.0.10
+      with:
+        secret-ids: |
+          AAP_KEY,github/crowdstrike/ansible_collection_falcon:aap_key
+
     - name: Refresh offline token
       run: |
         curl https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token -d grant_type=refresh_token -d client_id="cloud-services" -d refresh_token="$AAP_KEY" --fail --silent --show-error --output /dev/null
-      env:
-          AAP_KEY: ${{ secrets.AAP_KEY }}
