lint fixes and updates for ansible 12 ports

--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -5,11 +5,9 @@
     - name: CrowdStrike Falcon | Disable Maintenance Protection (if token provided)
       crowdstrike.falcon.falconctl:
         maintenance_token: "{{ falcon_maintenance_token }}"
-        state: 'present'
+        state: "present"
       when:
-        - falcon_maintenance_token is defined
-        - falcon_maintenance_token is not none
-        - falcon_maintenance_token | length > 0
+        - falcon_maintenance_token | default('', true) | length > 0
 
     - name: CrowdStrike Falcon | Configure Falcon Sensor Options (Linux)
       crowdstrike.falcon.falconctl:
@@ -138,9 +136,7 @@
         stdin: "{{ falcon_maintenance_token }}"
       changed_when: false
       when:
-        - falcon_maintenance_token is defined
-        - falcon_maintenance_token is not none
-        - falcon_maintenance_token | length > 0
+        - falcon_maintenance_token | default('', true) | length > 0
 
     - name: CrowdStrike Falcon | Set Grouping Tags (macOS)
       ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl grouping-tags set {{ falcon_tags }}"
