fix: remove DEB/Ubuntu GPG key handling to resolve Ubuntu 22.04 installation failures
Fixes issue #594 where Falcon sensor installation fails on Ubuntu 22.04
unless falcon_gpg_key_check is set to false.

Changes:
- Remove APT-specific GPG key import task that was causing failures
- Add RPM-only condition to GPG key transfer task
- Update documentation to clarify GPG keys are RPM-only per CrowdStrike docs
- Align implementation with CrowdStrike's official installation guidance

According to CrowdStrike's official documentation, GPG key verification
is only required for RPM-based systems (RHEL, CentOS, SLES, etc.) and
not needed for DEB-based systems (Ubuntu, Debian).

This fix allows Ubuntu 22.04 installations to work with default settings
while maintaining proper GPG verification for RPM-based systems.

--- a/roles/falcon_install/defaults/main.yml
+++ b/roles/falcon_install/defaults/main.yml
@@ -63,9 +63,13 @@ falcon_localfile_path:
 #
 falcon_localfile_cleanup: false
 
-# Specify whether or not to verify the Falcon sensor Linux based packages.
+# Specify whether or not to verify the Falcon sensor packages via GPG signature verification.
 # By default, this is enabled - which will handle the installation and importing
-# of the CrowdStrike Falcon sensor GPG Key.
+# of the CrowdStrike Falcon sensor GPG Key for RPM-based systems only.
+#
+# Note: According to CrowdStrike's official installation documentation, GPG key
+# verification is only required for RPM-based systems (RHEL, CentOS, SLES, etc.).
+# DEB-based systems (Ubuntu, Debian) do not require GPG key verification.
 #
 falcon_gpg_key_check: true
 
